--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,15 @@ python:
     - "2.6"
     - "2.7"
     - "3.3"
+    - "3.4"
+    - "3.5"
 
 install:
-    - pip install . --use-mirrors
-    - pip install nose --use-mirrors
+    - python setup.py install
+    - pip install pytest pytest-cov coveralls
 
-script: nosetests -v
+script:
+    - py.test test.py -v --cov trans --cov-report term-missing
+
+after_success:
+    - coveralls
