--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
     - pip install pytest pytest-cov coveralls
 
 script:
-    - py.test test.py -v --cov trans --cov-report term-missing
+    - py.test tests.py -v --cov trans --cov-report term-missing
 
 after_success:
     - coveralls
